<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_temples"
            android:title="@string/temples_title" />
        <item
            android:id="@+id/nav_landmarks"
            android:title="@string/landmarks_title" />
        <item
            android:id="@+id/nav_hotels"
            android:title="@string/hotels_title" />
        <item
            android:id="@+id/nav_hostels"
            android:title="@string/hostels_title" />
        <item
            android:id="@+id/nav_restaurants"
            android:title="@string/restaurants_title" />
        <item
            android:id="@+id/nav_shopping"
            android:title="@string/shopping_title" />
        <item
            android:id="@+id/nav_htrasports"
            android:title="@string/transports_title" />
        <item
            android:id="@+id/nav_hospitals"
            android:title="@string/hospitals_title" />
    </group>
</menu>