<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeInfoContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/placeImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/karnak_temple" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-smallcaps" />

    <TextView
        android:id="@+id/placeTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="30dp"
        android:textColor="@android:color/holo_red_dark"
        app:fontFamily="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_location_on_black_24" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="4.50"
            android:textColor="@android:color/black"
            app:fontFamily="serif" />
    </LinearLayout>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:paddingLeft="70dp"
        android:paddingRight="16dp"
        app:fontFamily="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/round_star_black_24" />

        <TextView
            android:id="@+id/ratingTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:gravity="right"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:fontFamily="serif" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="4"
            android:text="@string/full_rating_value"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:fontFamily="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placePhoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/round_local_phone_black_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.50"
            android:background="@android:color/holo_green_dark"
            android:gravity="center"
            android:text="@string/call"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="serif-monospace" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nightPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/night_price_as_low_as"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>
</LinearLayout>
